--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -113,6 +113,13 @@ body {
   background: #171616;
 }
 
+.sidebar-nav > .devider {
+  line-height: 0px;
+  margin: 5px 0px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid #141414;
+}
+
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
   background: none;
@@ -139,37 +146,37 @@ body {
 }
 
 .inset {
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
   width: auto;
 }
 
 @media (max-width:767px) {
 
-#wrapper {
-  padding-left: 0;
-}
+  #wrapper {
+    padding-left: 0;
+  }
 
-#sidebar-wrapper {
-  left: 0;
-}
+  #sidebar-wrapper {
+    left: 0;
+  }
 
-#wrapper.active {
-  position: relative;
-  left: 250px;
-}
+  #wrapper.active {
+    position: relative;
+    left: 250px;
+  }
 
-#wrapper.active #sidebar-wrapper {
-  left: 250px;
-  width: 250px;
-  transition: all 0.4s ease 0s;
-}
+  #wrapper.active #sidebar-wrapper {
+    left: 250px;
+    width: 250px;
+    transition: all 0.4s ease 0s;
+  }
 
-#menu-toggle {
-  display: inline-block;
-}
+  #menu-toggle {
+    display: inline-block;
+  }
 
-.inset {
-  padding: 15px;
-}
+  .inset {
+    padding: 0px;
+  }
 
 }
