--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -132,6 +132,7 @@ body {
   padding: 10px 5% 0 0;
   color: white;
   margin: 0px;
+  border-bottom: 3px solid #8c0000;
 }
 
 .content-header h2 {
@@ -149,6 +150,18 @@ body {
   padding: 0px 20px 20px 20px;
   width: auto;
 }
+
+.modal-header {
+  background: #353535;
+  color: white;
+  border-bottom: 1px solid #4d4d4d;
+}
+
+
+.modal-footer {
+  background: #f7f7fa;
+}
+
 
 @media (max-width:767px) {
 
