--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,17 +1,30 @@
-
 .portfolioTiles {
   padding-right: 10px;
   line-height: 175px;
 }
 
+.collage {
+  padding: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
+  margin-bottom: 8px;
+  line-height: 195px;
+  width: 240px;
+  background: white;
+  border: 1px solid grey;
+}
+
+
 .portfolioTiles p {
   line-height: 18px;
 }
+
 
 .portfolioTiles > a > img {
   width: 240px;
   border: 1px solid grey;
 }
+
 
 .publisher {
   text-align: center;
@@ -21,6 +34,16 @@
   border-top: 1px solid grey;
   border-bottom: 1px solid grey;
 }
+
+.downloadBtn {
+  z-index: 100;
+  margin-left: -225px;
+  height: 68px;
+  text-align: right;
+  margin-top: -68px;
+}
+
+
 
 .actions {
   z-index: 100;
@@ -57,6 +80,10 @@
       line-height: 145px;
     }
 
+    .collage {
+      width: 200px;
+    }
+
     .portfolioTiles > a > img {
         width: 200px;
     }
@@ -78,6 +105,11 @@
     padding: 5px 15px;
     margin: 0px -20px;
   }
+
+  .collage {
+      padding: 5px;
+      width: 140px;
+    }
 
   .portfolioTiles {
     padding-right: 5px;
