--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -38,7 +38,8 @@
   position: relative;
   top: 50px;
   left: -239px;
-  margin-right: -40px;
+  margin-right: -150px;
+  width: 150px;
 }
 
 .actions {
